--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "mocha -w",
+    "test": "mocha",
     "start": "nodemon server.js"
   },
   "keywords": [],
